--- a/Code/Week 3/Week 3 R Markdown Homework.Rmd
+++ b/Code/Week 3/Week 3 R Markdown Homework.Rmd
@@ -2,7 +2,12 @@
 title: "Week 3 Homework"
 author: "Freddie Grogono"
 date: "13/10/2021"
-output: html_document
+output:
+  html_document:
+    toc: true
+    toc_float: true
+    number_sections: true
+    toc_depth: 3
 ---
 
 # 1. Installing Packages
